# godot-usd-bridge

./: .clangd  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
addons/godot-usd-bridge/: godot-usd-bridge.gdextension
demo/: main.gd  main.gd.uid  project.godot
demo/fixtures/: smoke.usda
docs/: building.md  godot-usd-bridge-ai-policy.md  godot-usd-bridge-knowledge-base.md  godot-usd-bridge-spec.md
docs/adr/: 001-openusd-over-tinyusdz.md  002-no-containerized-build.md  003-onetbb-over-classic-tbb.md  004-godot-cpp-pinning.md  005-use-doctest.md
scripts/: build_usd.ps1  gen_compile_commands.ps1
src/: register_types.cpp  register_types.h  usd_bridge.cpp  usd_bridge.h
src/translate/: conventions.cpp  conventions.h
tests/: main.cpp  test_conventions.cpp  test_harness.cpp
tests/fixtures/: unauthored_defaults.usda  y_up_cm.usda  z_up_m.usda
